removed unecessary components

--- a/client/app.scss
+++ b/client/app.scss
@@ -10,7 +10,81 @@
   }
 }
 
-// Add your fractal Sass files below!
-@import 'lakes/lakes';
-@import 'nycChoro/nycChoro';
-@import 'usAnimate/us';
+body {
+	font-family: Verdana;
+}
+
+div {
+	font-family: Verdana;
+	font-size: 12px;
+	margin: 0 auto;
+	padding: 2px;
+}
+
+img {
+	width: 15px;
+	height: 15px;
+	border: 1px #ffffff solid;
+	vertical-align: middle;
+}
+
+header {
+	margin: 0 auto;
+	padding: 5px;
+	width: 85%;
+	background-color: #ff6600;
+	font-size: 12px;
+}
+
+.title {
+	// padding: 2px 5px;
+	// display: inline-block;
+	// vertical-align: top;
+	font-weight: bold;
+}
+
+.container {
+	text-align: start;
+}
+
+.articleList {
+	padding: 0;
+}
+
+.topNews, .newStories {
+	background-color: #f6f6ef;
+	width: 85%;
+	padding: 5px;
+}
+
+.index {
+	color: #828282;	
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
+	padding: 0px 3px;
+
+	.title {
+		display: inline-block;
+	}
+}
+
+.articleUrl {
+	font-size: 11px;
+	color: #828282;
+	padding: 0px 5px;
+}
+
+.lineTwo {
+	padding-left: 35px;
+	font-size: 9px;
+	color: #828282;
+}
+
+.lineTwo a:hover {
+	text-decoration: underline;
+}
+
+
