--- a/public/main.css
+++ b/public/main.css
@@ -1,125 +1,61 @@
 * {
   box-sizing: border-box; }
 
-.axis path, .axis line {
-  fill: none;
-  stroke-width: 1;
-  stroke: #000; }
+body {
+  font-family: Verdana; }
 
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
-  shape-rendering: crispEdges; }
+div {
+  font-family: Verdana;
+  font-size: 12px;
+  margin: 0 auto;
+  padding: 2px; }
 
-.formGroup {
-  float: left; }
+img {
+  width: 15px;
+  height: 15px;
+  border: 1px #ffffff solid;
+  vertical-align: middle; }
 
-.container:after {
-  content: "";
-  display: table;
-  clear: both; }
+header {
+  margin: 0 auto;
+  padding: 5px;
+  width: 85%;
+  background-color: #ff6600;
+  font-size: 12px; }
 
-.lakeMap {
-  float: left; }
+.title {
+  font-weight: bold; }
 
-.lakeChart {
-  float: left; }
+.container {
+  text-align: start; }
 
-.ca {
-  fill: #d3d3d3; }
+.articleList {
+  padding: 0; }
 
-circle.CSI {
-  fill: blue; }
+.topNews, .newStories {
+  background-color: #f6f6ef;
+  width: 85%;
+  padding: 5px; }
 
-path.CSI {
-  stroke: blue; }
+.index {
+  color: #828282; }
 
-circle.SHA {
-  fill: green; }
+a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0px 3px; }
+  a .title {
+    display: inline-block; }
 
-path.SHA {
-  stroke: green; }
+.articleUrl {
+  font-size: 11px;
+  color: #828282;
+  padding: 0px 5px; }
 
-circle.DMV {
-  fill: yellow; }
+.lineTwo {
+  padding-left: 35px;
+  font-size: 9px;
+  color: #828282; }
 
-path.DMV {
-  stroke: yellow; }
-
-circle.TAH {
-  fill: steelblue; }
-
-path.TAH {
-  stroke: steelblue; }
-
-circle.CRW {
-  fill: red; }
-
-path.CRW {
-  stroke: red; }
-
-circle.ATN {
-  fill: orange; }
-
-path.ATN {
-  stroke: orange; }
-
-#map {
-  width: 800px;
-  height: 500px;
-  float: left; }
-
-path {
-  fill: white;
-  stroke: grey;
-  fill-opacity: 0.4; }
-
-.a9 {
-  fill: #f7fbff; }
-
-.a8 {
-  fill: #deebf7; }
-
-.a7 {
-  fill: #c6dbef; }
-
-.a6 {
-  fill: #9ecae1; }
-
-.a5 {
-  fill: #6baed6; }
-
-.a4 {
-  fill: #4292c6; }
-
-.a3 {
-  fill: #2171b5; }
-
-.a2 {
-  fill: #08519c; }
-
-.a1 {
-  fill: #08306b; }
-
-.a0 {
-  fill: #081850; }
-
-.toolTip {
-  color: #222;
-  background: #fff;
-  padding: .5em;
-  text-shadow: #f5f5f5 0 1px 0;
-  border-radius: 2px;
-  box-shadow: 0px 0px 2px 0px #a6a6a6;
-  opacity: 0.9;
-  /*position: absolute;*/
-  float: right;
-  width: 160px; }
-
-.hidden {
-  display: none; }
-
-path {
-  fill: white;
-  stroke: grey; }
+.lineTwo a:hover {
+  text-decoration: underline; }
